--- a/css/style.css
+++ b/css/style.css
@@ -18,10 +18,26 @@ input[type="text"] {
     -moz-box-sizing: border-box;
 }
 
+[v-cloak] {
+    display: none;
+}
+
+.topbar {
+    position: absolute;
+    top: 0;
+    left: 0;
+    margin: auto;
+    width: 100%;
+    text-align: right;
+}
+
+.pullright {
+    align-self: flex-end;
+}
+
 .title {
     font-size: 5.8rem;
     color: #ddcdbc;
-    margin-bottom: 1rem;
     margin-top: 30px;
 }
 
@@ -139,6 +155,6 @@ button.btn {
 
 footer {
     flex-shrink: 0;
-    color: gray;
+    color: silver;
     height: 50px;
 }
