--- a/css/style.css
+++ b/css/style.css
@@ -47,8 +47,33 @@ input[type="text"] {
     margin: auto;
     text-align: left;
     border: 1px solid #e8e8e8;
-    border-radius: 5px;
     box-shadow: 5px 5px 23px rgba(0, 0, 0, 0.15);
+    position: relative;
+}
+
+.container::after {
+    content: '';
+    position: absolute;
+    bottom: -5px;
+    left: 3px;
+    width: 592px;
+    height: 10px;
+    z-index: -1;
+    background-color: white;
+    border: 1px solid #e8e8e8;
+    box-shadow: 5px 5px 23px rgba(0,0,0,0.15);
+}
+
+.container::before {
+    content: '';
+    position: absolute;
+    bottom: -8px;
+    left: 9px;
+    width: 580px;
+    height: 10px;
+    z-index: -2;
+    background-color: white;
+    border: 1px solid #e8e8e8;1
 }
 
 .taskInputWrapper{
@@ -63,6 +88,7 @@ input[type="text"] {
     padding: 16px 0;
     display: flex;
     align-items: center;
+    transition: all 0.3s;
 }
 
 #taskInput {
