--- a/css/style.css
+++ b/css/style.css
@@ -33,13 +33,15 @@ input[type="text"] {
     
 }
 
-.topbar .btn {
-    transition: all 0;
-    border: 1px solid transparent;
+.topbar a {
+    color: rgba(0,0,0,0.55);
+    text-decoration: none;
+    padding: 4px 0;
+    margin: 0 5px;
 }
 
-.topbar .btn:hover {
-    border: 1px solid silver;
+.topbar a:hover {
+    color: rgba(0,0,0,0.35);
 }
 
 .pullright {
@@ -49,7 +51,7 @@ input[type="text"] {
 .title {
     font-size: 5.8rem;
     color: #ddcdbc;
-    margin-top: 30px;
+    margin-top: 10px;
 }
 
 .container {
@@ -57,7 +59,7 @@ input[type="text"] {
     max-width: 600px;
     margin: auto;
     text-align: left;
-    border: 1px solid #e8e8e8;
+    border: 0;
     box-shadow: 5px 5px 23px rgba(0, 0, 0, 0.15);
     position: relative;
 }
@@ -84,12 +86,20 @@ input[type="text"] {
     height: 10px;
     z-index: -2;
     background-color: white;
-    border: 1px solid #e8e8e8;1
+    border: 1px solid #e8e8e8;
 }
 
 .taskInputWrapper{
     padding: 10px;
     border-bottom: 3px solid #e8e8e8;
+    display: flex;
+}
+
+.taskInputWrapper i {
+    font-size: 1.2rem;
+    align-self: center;
+    margin: 0 8px 0 2px;
+    color: rgba(0,0,0,0.35);
 }
 
 .tasklist ul li {
@@ -135,7 +145,7 @@ input[type="text"] {
     background: url('../img/check.svg');
 
     background-size: contain;
-    background-position: 2px 3px;
+    background-position: 2px 2px;
     background-repeat: no-repeat;
 }
 
